--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 
+		<!-- Postgre Database -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.5.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
