--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,27 +1,3 @@
 spring:
-  server:
-    port: 8080
-    jetty:
-      access-log:
-        file-date-format: yyyy-MM-dd
-  h2:
-    console:
-      enabled: true
-  datasource:
-    url: jdbc:h2:file:~/db
-    username: sa
-    password: password
-    driverClassName: org.h2.Driver
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-  data:
-    jpa:
-      repositories:
-        bootstrap-mode: default
-
-  jackson:
-    deserialization:
-      fail-on-unknown-properties: true
+  profiles:
+    active: "prod"
