--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -10,7 +10,7 @@ spring:
     password: yAT05kuyaINHnzslFgy5
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
   data:
     jpa:
