--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -7,16 +7,19 @@ spring:
   h2:
     console:
       enabled: true
+      path: /h2-console
   datasource:
-    url: jdbc:h2:file:~/db
+    url: jdbc:h2:mem:testdb
     username: sa
     password: password
     driverClassName: org.h2.Driver
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: create-drop
+      dialect: org.hibernate.dialect.H2Dialect
+      ddl-auto: update
     show-sql: true
+    format_sql: true
   data:
     jpa:
       repositories:
